--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11411,11 +11411,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_data = df.sample(frac=0.1, random_state=42)\n",
+    "main_data.to_csv('Data/main_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('Data/main_data.csv', index=False)\n",
+    "df.to_csv('Data/main_data_full.csv', index=False)\n",
     "df_rfm.to_csv('Data/df_rfm.csv', index=False)"
    ]
   }
