--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -11411,17 +11411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_data = df.sample(frac=0.1, random_state=42)\n",
-    "main_data.to_csv('Data/main_data.csv', index=False)"
+    "main_data = df.sample(frac=0.005, random_state=42)\n",
+    "main_data.to_csv('main_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
